# dnautils

./: .gitignore  README.md  pyproject.toml  requirements.txt
setup/: setup_dnautils_env.sh
src/dnautils/: __init__.py  legacy.py  pykeys.py  redshift.py  utils.py
src/dnautils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_imports.py
