[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnautils"
version = "0.1.0"
description = "Shared wrappers around legacy Common_Functions utilities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "argcomplete==1.12.3",
  "asn1crypto==1.5.1",
  "attrs==20.3.0",
  "awscrt==0.16.8",
  "asana==3.2.3",
  "Babel==2.9.1",
  "beautifulsoup4==4.12.2",
  "betterproto==2.0.0b6",
  "black==24.2.0",
  "boto3==1.33.5",
  "botocore==1.33.5",
  "cachetools==5.3.1",
  "certifi==2023.7.22",
  "cffi==1.14.5",
  "chardet==4.0.0",
  "click==8.1.7",
  "cloudpickle==2.0.0",
  "colorama==0.4.4",
  "configobj==5.0.6",
  "contourpy==1.1.0",
  "cryptography==41.0.3",
  "cycler==0.11.0",
  "distro==1.5.0",
  "docutils==0.16",
  "et-xmlfile==1.1.0",
  "filelock==3.12.4",
  "fonttools==4.42.1",
  "google-api-core==2.15.0",
  "google-api-python-client==2.111.0",
  "google-auth-httplib2==0.2.0",
  "google-auth-oauthlib==1.1.0",
  "google-auth==2.26.1",
  "google==3.0.0",
  "googleapis-common-protos==1.62.0",
  "google-cloud-storage==2.16.0",
  "greenlet==2.0.2",
  "grpclib==0.4.7",
  "gspread==5.11.2",
  "gspread-dataframe==3.3.1",
  "h2==4.1.0",
  "hpack==4.0.0",
  "httplib2==0.22.0",
  "hyperframe==6.0.1",
  "idna==2.10",
  "importlib-resources==6.0.1",
  "isort==5.13.2",
  "Jinja2==3.0.3",
  "jmespath==0.10.0",
  "jsonpatch==1.21",
  "jsonpointer==2.0",
  "jsonschema==3.2.0",
  "kiwisolver==1.4.5",
  "matplotlib==3.7.2",
  "multidict==6.0.5",
  "mypy-extensions==1.0.0",
  "netifaces==0.10.6",
  "numpy==1.25.2",
  "oauth2client==4.1.3",
  "oauthlib==3.0.2",
  "openpyxl==3.1.2",
  "oscrypto==1.3.0",
  "oyaml==1.0",
  "packaging==24.2.0",
  "pandas==2.0.3",
  "pandasql==0.7.3",
  "pathspec==0.12.1",
  "Pillow==10.0.0",
  "platformdirs==3.8.1",
  "ply==3.11",
  "prettytable==0.7.2",
  "progressbar2==3.52.1",
  "prompt-toolkit==3.0.24",
  "protobuf==4.25.1",
  "psycopg2-binary==2.9.7",
  "pyarrow==10.0.1",
  "pyasn1-modules==0.3.0",
  "pyasn1==0.5.0",
  "pycparser==2.20",
  "pycryptodomex==3.19.0",
  "PyJWT==2.8.0",
  "PyMySQL==1.1.0",
  "pyodbc==4.0.39",
  "pyOpenSSL==23.2.0",
  "pyparsing==2.4.7",
  "pyrsistent==0.17.3",
  "pyserial==3.4",
  "PySocks==1.7.1",
  "python-dateutil==2.8.2",
  "python-nomad==2.0.0",
  "python-utils==2.4.0",
  "PyYAML==6.0.1",
  "requests-oauthlib==1.3.1",
  "requests==2.27.1",
  "rsa==4.9",
  "ruamel.yaml==0.16.6",
  "s3transfer==0.8.2",
  "setuptools<81",
  "setools==1.2.3",
  "six==1.15.0",
  "slack-sdk==3.26.1",
  "snowflake-connector-python>=3.14.0,<4.0.0",
  "snowflake-snowpark-python==1.29.1",
  "snowflake-sqlalchemy==1.5.0",
  "snowflake-uuid==0.1.1",
  "sortedcontainers==2.4.0",
  "soupsieve==2.5",
  "SQLAlchemy==1.4.49",
  "sqlalchemy-redshift==0.8.14",
  "sqldf==0.4.2",
  "statsmodels==0.14.6",
  "tabulate==0.9.0",
  "thoughtspot_rest_api_v1==1.5.5",
  "thoughtspot_tml==2.0.14",
  "tomli==2.0.1",
  "tomlkit==0.12.1",
  "typing_extensions==4.8.0",
  "tzdata==2023.3",
  "uritemplate==4.1.1",
  "urllib3>=1.25.10,<1.27",
  "wcwidth==0.2.5",
  "zipp==3.16.2",
  "pytz==2022.7.1",
  "google-cloud-bigquery==3.33.0",
  "Werkzeug==2.2.3",
  "flask==2.2.2",
  "paramiko==4.0.0",
  "aiobotocore==2.11.2",
  "aiohttp==3.9.3",
  "fsspec==2025.3.2",
  "s3fs==2025.3.2",
  "elasticsearch==8.18.1",
  "elastic-transport==8.17.1",
  "hvac==2.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
